# pylocate

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/pylocate/: cli.py  db.py
src/: lib.rs
