[package]
name = "pymlocate"
version = "0.6.3"
edition = "2021"

[lib]
name = "pymlocate_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
jwalk = "0.8"
rusqlite = { version = "0.30", features = ["bundled"] }
rayon = "1.8"

[profile.release]
lto = true
codegen-units = 1
